@startuml
Handler <|-- HeartBeatHandler
Handler <|-- ServerHandler
Handler o--Handler


abstract class Handler{
    -Handler handler
    +handlerRequest()
    +getHandler()
    +addLast(Handler handler)
}
class HeartBeatHandler {
    +handlerRequest()
}
class ServerHandler {
    +handlerRequest()
}


@enduml